kubernetes/service.yml
apiVersion: v1
kind: Service
metadata:
  name: torinos-api
  namespace: torinos-api
  labels:
    name: torinos-api
    role: web
spec:
  type: NodePort
  selector:
    name: torinos-api
    role: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
